--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
-#editor,
-#preview {
+body {
+  background-color: #373761 !important;
+}
+
+body, .container-fluid, #root, .pane, .col-lg-6, #editor, #preview {
   height: 100%;
 }
 
-#preview {
-  border: 1px solid lightgray;
-  border-radius: 5px;
-  padding: 5px;
-  overflow: scroll;
+.row {
+  height: calc(100% - 60px);
 }
 
 .pane-title {
@@ -19,5 +19,27 @@
 
 .pane {
   box-shadow: 0px 5px 10px black;
+  min-height: 400px;
+  height: calc(100% - 20px);
+}
+
+/*
+#editor,
+#preview {
   height: 100%;
 }
+*/
+
+#editor {
+  font-family: 'Courier New', Courier, monospace;
+  border-radius: 0px 0px 5px 5px;
+}
+
+#preview {
+  border: 1px solid lightgray;
+  border-radius: 0px 0px 5px 5px;
+  padding: 5px;
+  overflow: scroll;
+  background-color: white;
+}
+
