--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
 body {
-  background-color: #373761 !important;
+  background-color: rgb(52, 58, 64);
 }
 
-body, .container-fluid, #root, .pane, .col-lg-6, #editor, #preview {
+html,
+body,
+.container-fluid,
+#root {
   height: 100%;
 }
 
-.row {
-  height: calc(100% - 60px);
+.navbar-brand {
+  width: 185px;
 }
 
 .pane-title {
@@ -15,31 +18,37 @@ body, .container-fluid, #root, .pane, .col-lg-6, #editor, #preview {
   color: white;
   text-align: center;
   font-weight: bold;
+  border-radius: 5px 5px 0 0;
 }
 
 .pane {
   box-shadow: 0px 5px 10px black;
-  min-height: 400px;
-  height: calc(100% - 20px);
 }
-
-/*
-#editor,
-#preview {
-  height: 100%;
-}
-*/
 
 #editor {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   border-radius: 0px 0px 5px 5px;
+  margin-bottom: 20px;
+  min-height: 400px;
 }
 
 #preview {
   border: 1px solid lightgray;
   border-radius: 0px 0px 5px 5px;
-  padding: 5px;
-  overflow: scroll;
+  padding: 10px;
+  overflow: auto;
   background-color: white;
 }
 
+@media (min-width: 992px) {
+  .row,
+  .pane,
+  #preview,
+  #editor {
+    height: calc(100vh - 90px);
+  }
+
+  #editor {
+    margin-bottom: 0px;
+  }
+}
