--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,18 @@ body {
   background-color: rgb(52, 58, 64);
 }
 
+/* 
 html,
 body,
 .container-fluid,
 #root {
   height: 100%;
 }
+*/
 
 .navbar-brand {
-  width: 185px;
+  font-size: 1.5em;
+  font-family: "Major Mono Display", monospace;
 }
 
 .pane-title {
@@ -27,28 +30,41 @@ body,
 
 #editor {
   font-family: "Courier New", Courier, monospace;
+  border: none;
   border-radius: 0px 0px 5px 5px;
   margin-bottom: 20px;
   min-height: 400px;
+  resize: none;
+}
+
+/* remove blue outline on focus */
+#editor:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  border: none;
 }
 
 #preview {
-  border: 1px solid lightgray;
   border-radius: 0px 0px 5px 5px;
   padding: 10px;
   overflow: auto;
   background-color: white;
 }
 
+/* 2-column, full-height layout for widths over 992px */
 @media (min-width: 992px) {
-  .row,
-  .pane,
   #preview,
   #editor {
-    height: calc(100vh - 90px);
+    height: calc(100vh - 110px);
   }
 
   #editor {
     margin-bottom: 0px;
+  }
+
+  .navbar-brand {
+    font-size: 2em;
   }
 }
